--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,17 @@
 body {
-  background: red;
-  color: white;
+  background: white;
+  color: black;
+}
+
+div {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+li {
+  display: inline-block;
+}
+
+li:hover {
+  cursor: pointer;
 }
