--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,18 @@
 $primary: #0E2E54;
 $secondary: #A89B65;
 $nav-width: 120px;
-$offset: calc($nav-width / 2);
+
+@font-face {
+    font-family: 'acre';
+    src: url('fonts/acre-medium-webfont.eot');
+    src: url('fonts/acre-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/acre-medium-webfont.woff2') format('woff2'),
+         url('fonts/acre-medium-webfont.woff') format('woff'),
+         url('fonts/acre-medium-webfont.ttf') format('truetype'),
+         url('fonts/acre-medium-webfont.svg#acremedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
   background: white;
@@ -14,6 +25,10 @@ body {
 div {
   border: 1px solid black;
   /* border-bottom: 1px solid black; */
+}
+section {
+  border: 1px solid black;
+  // position: relative;
 }
 
 /* LAYOUT */
@@ -27,10 +42,47 @@ body {
   /* opacity: 0.5; */
   height: 100vh;
 }
-
+.full-height {
+  padding: 50px;
+  // minus top + bottom padding
+  height: calc(100vh - 100px);
+  position: relative;
+}
+.section-title {
+  font-size: 50px;
+  opacity: 0.5;
+  position: absolute;
+  right: 0;
+  top: 150px;
+  // padding: 100px 0 0 0;
+}
 .flex-space-around {
   display: flex;
   justify-content: space-around;
+}
+.rotated-up-center {
+  -ms-transform: translate(0px, -50px) rotate(-90deg);
+  -moz-transform: translate(0px, -50px) rotate(-90deg);
+  -webkit-transform: translate(0px, -50px) rotate(-90deg);
+  transform: translate(0px, -50px) rotate(-90deg);
+  filter: none; /* Mandatory for IE9 to show the vertical text correctly */
+
+  -ms-transform-origin: center center 0;
+  -moz-transform-origin: center center 0;
+  -webkit-transform-origin: center center  0;
+  transform-origin: center center 0;
+}
+.rotated-up-rb {
+  -ms-transform: translate(-50px, -100px) rotate(-90deg);
+  -moz-transform: translate(-50px, -100px) rotate(-90deg);
+  -webkit-transform: translate(-50px, -100px) rotate(-90deg);
+  transform: translate(-50px, -100px) rotate(-90deg);
+  filter: none; /* Mandatory for IE9 to show the vertical text correctly */
+
+  -ms-transform-origin: center center 0;
+  -moz-transform-origin: center center 0;
+  -webkit-transform-origin: center center  0;
+  transform-origin: right bottom;
 }
 
 // NAVBAR
@@ -46,20 +98,24 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  .nav-link {
+    display: inline-block;
+    padding: 10px;
+    &.active {
+      font-weight: 800;
+    }
+    a {
+      color: $secondary;
+      text-decoration: none;
+    }
+    &:hover {
+      cursor: pointer;
+    }
+  }
   .align-top {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    li {
-      display: inline-block;
-      padding: 10px;
-      a {
-        color: $secondary;
-      }
-      &:hover {
-        cursor: pointer;
-      }
-    }
   }
   .contact {
     display: flex;
@@ -69,24 +125,20 @@ body {
       color: $secondary;
     }
   }
-  .rotated-up {
-    -ms-transform: translate(0px, -50px) rotate(-90deg);
-    -moz-transform: translate(0px, -50px) rotate(-90deg);
-    -webkit-transform: translate(0px, -50px) rotate(-90deg);
-    transform: translate(0px, -50px) rotate(-90deg);
-    filter: none; /* Mandatory for IE9 to show the vertical text correctly */
-
-    -ms-transform-origin: center center 0;
-    -moz-transform-origin: center center 0;
-    -webkit-transform-origin: center center  0;
-    transform-origin: center center 0;
-  }
   .align-bottom {
     display: inline-block;
     margin-bottom: 30px;
     position: relative;
-    a {
+    .brand {
+      font-family: 'acre', 'Open Sans', sans-serif;
       color: $secondary;
+      text-transform: uppercase;
+      font-weight: 600px;
+      font-size: 36px;
+      line-height: 85%;
+      span {
+        letter-spacing: 2px;
+      }
     }
   }
 }
@@ -101,16 +153,26 @@ body {
   position: fixed;
   top: 0;
   left: 120px;
-  width: calc(50% - 60px);
-  .hero-text {
-    width: 50%;
+  width: 80%;
+  // change to width: calc(50% - 170px); when scrolled out of home
+  .hero {
+    width: 40%;
     /* height: 50vh; */
-    // padding: 25vh 100px 35vh;
+    padding: 50px 30px;
+    height: 100vh;
     .hero-title {
-      font-size: 36px;
+      font-family: 'acre', 'Open Sans', sans-serif;
+      font-size: 80px;
+      font-weight: 600;
+      text-transform: uppercase;
+      line-height: 85%;
+      margin-bottom: 0.5em;
+      span {
+        letter-spacing: 3px;
+      }
     }
-    .hero-subtitle {
-      font-size: 28px;
+    img {
+      width: 100%;
     }
   }
 }
@@ -119,9 +181,14 @@ body {
   // float: right;
   position: absolute;
   right: 0;
-  width: 50%;
+  width: 60%;
 }
 
+// PORTFOLIO PAGE
+.portfolio-container {
+  padding: 50px;
+  // width: calc(100vw - 100px);
+}
 
 /* CONTACT LINKS */
 .contact {
